# bazel-cmake-deps-override

./: README.md  setup.cfg
src/bazel_cmake_deps_override/: bazel_cmake_deps_override.py
src/bazel_cmake_deps_override/templates/: CMakeLists.txt  bazel_cmake_mapping.toml
