[metadata]
name = bazel-cmake-deps-override
description = Helper utility to override bazel deps with CMake dependency already available in the environment.
long_description = file: README.md
long_description_content_type = text/markdown
author = Silvio Traversaro
author_email = silvio.traversaro@iit.it
license = BSD
license_files = LICENSE
platforms = any
url = https://github.com/ami-iit/bazel-cmake-deps-override

project_urls =
    Changelog = https://github.com/ami-iit/bazel-cmake-deps-override/releases
    Source = https://github.com/ami-iit/bazel-cmake-deps-override
    Tracker = https://github.com/ami-iit/bazel-cmake-deps-override/issues

keywords =

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires = jinja2


[options.packages.find]
where = src

[options.package_data]
bazel_cmake_deps_override = templates/*

[options.entry_points]
console_scripts =
   bazel-cmake-deps-override = bazel_cmake_deps_override.bazel_cmake_deps_override:main

[options.extras_require]
style =
    black
    isort
testing =
all =
    %(style)s
    %(testing)s

[tool:pytest]
addopts = -rsxX -v --strict-markers
testpaths = tests
